Handle the newline, as per suggestion

--- a/data/email.tmpl
+++ b/data/email.tmpl
@@ -21,7 +21,8 @@
 
      This comment will be stripped from the generated email.
 
-  */}}Content-Type: multipart/mixed; boundary=21ee3da964c7bf70def62adb9ee1a061747003c026e363e47231258c48f1
+  */ -}}
+Content-Type: multipart/mixed; boundary=21ee3da964c7bf70def62adb9ee1a061747003c026e363e47231258c48f1
 From: {{.From}}
 To: {{.To}}
 Subject: [rss2email] {{.Subject}}
